--- a/src/port.html
+++ b/src/port.html
@@ -26,7 +26,11 @@
     </div>
     <div class="page">
         <div class="name">
-            <p>Art is Love</p>
+            <div class="art">
+                <CENTER>
+                    <p>Art is Love</p>
+                </CENTER>
+            </div>
         </div>
         <div class="img1">
             <div class="i1"></div>
