--- a/src/project.html
+++ b/src/project.html
@@ -21,7 +21,7 @@
     </div>
     <!-- ------------------------projects--------------------- -->
 
-    <div>
+    <div class="main-project">
         
         <div class="project">
             <p>website project</p> 
