--- a/src/about.html
+++ b/src/about.html
@@ -10,6 +10,7 @@
 <body>
    <div class="about-main-container">
     <div class="logo-jcimg"><img src="./assets/jc1.jpg" alt=""></div>
+    
     <div class="about" >
         <ul>
             <li><a href="./index.html">Home</a></li>
@@ -21,9 +22,13 @@
     </div>
     <!-- -----------------about--------------------- -->
    <div class="about-container">
+    <!-- <div class="heading">
+        <center>About</center>
+    </div> -->
     <div class="artist">
         <img src="./assets/artist.jpg" alt="">
     </div>
+  
 
     <div class="about-info">
         <div class="info">
