--- a/src/about.html
+++ b/src/about.html
@@ -34,8 +34,8 @@
         <div class="info">
             <div class="email">
                 <img src="./assets/mail.jpg" alt="">
-                <p>Email :</p>
-                <p>janhavijchitade@gmail.com</p>
+                <p>Email: janhavijchitade@gmail.com</p>
+                
             </div>
             <div class="email">
                  <a href="https://github.com/Janhavi22" >
