--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body >
    <div class="container">
-    <div class="logo-jcimg"><img src="./src/assets/jc1.jpg" alt=""></div>
+    <div class="logo-jcimg"><a href="./index.html"><img src="./src/assets/jc1.jpg" alt=""></a></div>
     <div class="about" >
         <ul>
             <li><a href="./index.html">Home</a></li>
@@ -43,12 +43,12 @@
            </div>
            <div class="icon">
             <a href="https://instagram.com/A.r.t_i.s_l.o.v.e__" >
-              <img src="./src/assets/logo-insta.jpg" alt="">
+              <img src="./src/assets/insta-logo.jpg" alt="">
              </a>
            </div>
            <div class="icon">
             <a href="https://www.linkedin.com/in/janhavi-chitade-b4392020a">
-              <img src="./src/assets/logo-link.png" alt="">
+              <img src="./src/assets/link-logo.jpg" alt="">
              </a> 
            </div>
          </div>
