--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="about-main-container">
-    <div class="logo-jcimg"><img src="./assets/jc1.jpg" alt=""></div>
+    <div class="logo-jcimg"><a href="./index.html"><img src="./assets/jc1.jpg" alt=""></a></div>
     
     <div class="about" >
         <ul>
@@ -45,13 +45,13 @@
             </div>
             <div class="email">
              <a href="https://instagram.com/A.r.t_i.s_l.o.v.e__" >
-             <img src="./assets/logo-insta.jpg" alt="">
+             <img src="./assets/insta-logo.jpg" alt="">
                 <p>Instagram </p>
                 </a>
             </div>
             <div class="email">
                 <a href="https://www.linkedin.com/in/janhavi-chitade-b4392020a">
-                    <img src="./assets/logo-link.png" alt="">
+                    <img src="./assets/link-logo.jpg" alt="">
                     <p>Linkedin </p>
                 </a>
                 
