--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
            </div>
            <div class="icon">
             <a href="https://instagram.com/A.r.t_i.s_l.o.v.e__" >
-              <img src="./assets/logo-insta.jpg" alt="">
+              <img src="./assets/insta-logo.jpg" alt="">
              </a>
            </div>
            <div class="icon">
             <a href="https://www.linkedin.com/in/janhavi-chitade-b4392020a">
-              <img src="./assets/logo-link.png" alt="">
+              <img src="./assets/link-logo.jpg" alt="">
              </a> 
            </div>
          </div>
