--- a/src/port.html
+++ b/src/port.html
@@ -14,7 +14,7 @@
 <body>
    
     <div class="about" >
-        <div class="logo-jcimg"><img src="./assets/jc1.jpg" alt=""></div>
+        <div class="logo-jcimg"><a href="./index.html"><img src="./assets/jc1.jpg" alt=""></a></div>
         <ul>
             
             <li><a href="./index.html">Home</a></li>
