--- a/src/project.html
+++ b/src/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <div class="project-container">
-    <div class="logo-jcimg"><img src="./assets/jc1.jpg" alt=""></div>
+    <div class="logo-jcimg"><a href="./index.html"><img src="./assets/jc1.jpg" alt=""></a></div>
     <div class="about" >
         <ul>
             <li><a href="./index.html">Home</a></li>
