--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <h3>Janhavi Chitade</h3>
             <p>Frontend Developer and Artist</p>
-            <p>As a creative artist Desiring to gain a position with room for growth and advancement ,<br>Utilize my Creative and innovative skills in designing,</p>
+            <p>As a creative artist Desiring to gain a position with room for growth and advancement ,<br>Utilize my Creative and innovative skills in designing.</p>
                 <a href="https://drive.google.com/file/d/1XMnJ-fPpPFRybRV8xZ2CZjJI5Jlp9UPR/view?usp=share_link">Resume</a>
                 
         </div>
