--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./src/about.html">About</a></li>
             <li><a href="./src/project.html">Projects</a></li>
-            <li><a href="./src/port.html">Art</a></li>
+            <!-- <li><a href="./src/port.html">Art</a></li> -->
            
         </ul>
         
